test/parser/member-func-decl-no-func.delta
// RUN: not %delta -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:1: error: unexpected identifier
int.foo() { }
